--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
     />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; font-src 'self'; connect-src 'self' ws: wss: webpack: github.com api.github.com; form-action 'self' github.com; worker-src 'self' blob:;"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; media-src 'self' blob:; font-src 'self'; connect-src 'self' ws: wss: webpack: github.com api.github.com; form-action 'self' github.com; worker-src 'self' blob:;"
     />
     <title>Vuemantics</title>
     <meta
